Fixed instrumentation bug: some non-traced methods were incorrectly believed to be traced, resulting in the traced method call enveloppe to be used. As the method was actually non-traced, the before/enter scheme could not complete, resulting in loss of events and causing reconstituted call stack explosion.