@@ -15,11 +15,13 @@ VMARGS="$VMARGS -Dcollector-type=socket"
 VMARGS="$VMARGS -Xbootclasspath/p:./bin" 
 VMARGS="$VMARGS -ea" 
 VMARGS="$VMARGS -server" 
-VMARGS="$VMARGS -Xmx256m" 
+VMARGS="$VMARGS -Xmx384m" 
+VMARGS="$VMARGS -XX:MaxPermSize=128m"
 #VMARGS="$VMARGS -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000"
 
 #java $VMARGS -cp ./bin dummy.Dummy
-~/apps/eclipse-3.3/eclipse -data ~/eclipse/ws-tod -consolelog -vmargs $VMARGS
+~/apps/eclipse-3.2.1/eclipse -data ~/eclipse/ws-tod -consolelog -vmargs $VMARGS
+#java $VMARGS -cp ./bin calls.Main
 
 
 #Machines:
